web-infras/parser/tests/fixtures/babel/es2017/trailing-function-commas/5/output.txt
[SyntaxError]: Unexpect trailing comma. (1,5)
1|log(,);
 |   ^
